저장 부분 코드 개선